Código con librerías de python.

--- a/Prueba Jupyter N.ipynb
+++ b/Prueba Jupyter N.ipynb
@@ -29,8 +29,8 @@
     "x_n=(np.exp(1j*(t_n/2)*np.pi) - np.exp(1j*t_n*5*np.pi))*np.sin((3*t_n/2)*7*np.pi)\n",
     "\n",
     "plt.stem(t_n,np.real(x_n))\n",
-    "plt.xlabel('t')\n",
-    "plt.ylabel('x')\n",
+    "plt.xlabel('t', size=14)\n",
+    "plt.ylabel('x', size=14)\n",
     "plt.show()\n",
     "\n",
     "min_len = min(len(t), len(x), len(t_n), len(x_n))\n",
